force-app/main/default/objects/Xero_Invoice__c/Xero_Invoice__c.object-meta.xml
<CustomObject>
    <description>Mirror of a Xero ACCREC invoice linked to an Opportunity.</description>
    <label>Xero Invoice</label>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>