force-app/main/default/objects/Xero_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account from the Opportunity at sync time.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Xero Invoices</relationshipLabel>
    <relationshipName>Xero_Invoices_Account</relationshipName>
    <type>Lookup</type>
</CustomField>