force-app/main/default/objects/Xero_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <description>Picklist mirror of Xero invoice status (DRAFT, SUBMITTED, AUTHORISED, PAID). Kept in sync with text Status__c from Xero payloads where the value matches one of these API values.</description>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
            </value>
            <value>
                <fullName>AUTHORISED</fullName>
            </value>
            <value>
                <fullName>PAID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>