force-app/main/default/objects/Xero_Invoice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Opportunity for this invoice.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Xero Invoices</relationshipLabel>
    <relationshipName>Xero_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>