force-app/main/default/objects/Xero_Invoice__c/fields/PDF_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Document_Id__c</fullName>
    <description>Salesforce ContentDocument Id for the invoice PDF fetched from Xero.</description>
    <label>PDF Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>