force-app/main/default/objects/Xero_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Xero invoice status (e.g. PAID, VOIDED, AUTHORISED).</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>