force-app/main/default/objects/Xero_Invoice__c/fields/Xero_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_ID__c</fullName>
    <description>Xero Invoice GUID (external id for upsert).</description>
    <externalId>true</externalId>
    <label>Xero Invoice ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>