force-app/main/default/objects/Xero_Invoice__c/fields/Xero_Status__c.field-meta.xml
<CustomField>
    <fullName>Xero_Status__c</fullName>
    <description>Invoice status from Xero (e.g. AUTHORISED).</description>
    <label>Xero Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>